EO-618: Inherit page authorization. Use specific tile type
