# src/main/java/org/tailormap/api/configuration/dev/PopulateTestData.java
@@ -2012,6 +2012,7 @@ from [B3Partners](https://www.b3partners.nl)!
             .authorizationRules(ruleAnonymousRead)
             .id(UUID.randomUUID().toString())
             .title("Default app")
+            .tileType(PageTile.TileTypeEnum.APPLICATION)
             .applicationId(Optional.ofNullable(applicationRepository.findByName("default"))
                 .map(Application::getId)
                 .orElse(null))
@@ -2023,6 +2024,7 @@ from [B3Partners](https://www.b3partners.nl)!
             .authorizationRules(ruleAnonymousRead)
             .id(UUID.randomUUID().toString())
             .title("Secured app")
+            .tileType(PageTile.TileTypeEnum.APPLICATION)
             .applicationId(Optional.ofNullable(applicationRepository.findByName("secured"))
                 .map(Application::getId)
                 .orElse(null))
@@ -2033,6 +2035,7 @@ from [B3Partners](https://www.b3partners.nl)!
             .authorizationRules(ruleAnonymousRead)
             .id(UUID.randomUUID().toString())
             .title("Secured app (unfiltered)")
+            .tileType(PageTile.TileTypeEnum.APPLICATION)
             .applicationId(Optional.ofNullable(applicationRepository.findByName("secured"))
                 .map(Application::getId)
                 .orElse(null))
@@ -2043,13 +2046,31 @@ from [B3Partners](https://www.b3partners.nl)!
             .authorizationRules(ruleAnonymousRead)
             .id(UUID.randomUUID().toString())
             .title("About")
+            .tileType(PageTile.TileTypeEnum.PAGE)
             .pageId(about.getId())
             .openInNewWindow(false),
         new PageTile()
             .authorizationRules(ruleAnonymousRead)
             .id(UUID.randomUUID().toString())
             .title("B3Partners")
+            .tileType(PageTile.TileTypeEnum.URL)
             .url("https://www.b3partners.nl/")
+            .openInNewWindow(true),
+        new PageTile()
+            .authorizationRules(ruleAnonymousRead)
+            .id(UUID.randomUUID().toString())
+            .tileType(PageTile.TileTypeEnum.PAGE)
+            .title("Secured page")
+            .pageId(loggedIn.getId())
+            .filterRequireAuthorization(true)
+            .openInNewWindow(true),
+        new PageTile()
+            .authorizationRules(ruleAnonymousRead)
+            .id(UUID.randomUUID().toString())
+            .tileType(PageTile.TileTypeEnum.PAGE)
+            .title("Secured page (unfiltered)")
+            .pageId(loggedIn.getId())
+            .filterRequireAuthorization(false)
             .openInNewWindow(true)));
     pageRepository.save(page);
 
